dnl Process this file with autoconf to produce a configure script.
AC_INIT(default)
AM_INIT_AUTOMAKE(docbook-env, 1.0.4)

dnl set envdir
if test "x$prefix" == "xNONE"; then
   prefix=$ac_default_prefix
fi
envdir="$prefix/share/$PACKAGE"
AC_SUBST(envdir)

AC_OUTPUT(
	Makefile
        packages/Makefile
        common/Makefile
        css/Makefile
        default/Makefile
        doc/Makefile
        images/Makefile
        template/Makefile
        xsl/Makefile
	default/Makefile.sample
	common/Makefile.cmn
	pdf/userconfig.xml
dnl	pdf/mkmetrics
	)
